# eurosat-mlops-pipeline

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  unit_test.yml
configs/: default.yaml
src/: __init__.py  data.py  evaluate.py  model.py  predict.py  train.py  utils.py
src/eurosat_mlops_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_data_loading.py  test_data_splits.py  test_data_transforms.py  test_eval_smoke.py  test_predict_smoke.py  test_smoke.py  test_train.py  test_train_smoke.py  test_transforms.py
